# simple-server

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.txt  mtimes.py  request.txt  serve.sh  serve_g.sh
client/: hello.txt  index.html  missing.html  playground.html  playground.js
examples/: server.rs  server_g.rs
fake_server/src/: index.html
src/: TLS.rs  TLS2.rs  helpers.rs  http.rs  lib.rs  library.rs  main.rs  server_G.rs  smithy.rs  websocket.rs
