[package]
name = "simple_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mio = {version = "1.0.2", features = ["os-poll", "net", "os-ext"]}

rustls = {version = "0.23"}

camino = {version = "1.1"}

chrono = {version = "0.4"}

sha1 = {version = "0.10.6"}

base64 = {version = "0.22"}
