[package]
name = "simple_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mio = {version = "1.0.3", features = ["os-poll", "net"]}

rustls = {version = "0.23"}

camino = {version = "1.1"}

chrono = {version = "0.4"}

sha1 = {version = "0.10.6"}

base64 = {version = "0.22"}

[lints.clippy]
needless_return = "allow"
collapsible_match = "allow"
double_parens = "allow"
upper_case_acronyms = "allow"
